erDiagram

    %% ==== Tables ==== %%

    %% main tables
    POST {
        INTEGER post_id PK
        TEXT title
        TEXT body
        TEXT date
    }

    TAG {
        INTEGER tag_id PK
        TEXT tag
    }

    USER {
        INTEGER user_id PK
        TEXT user_name
    }

    %% bridge tables
    POST_TAG {
        TEXT tag_id FK
        TEXT post_id FK
    }

    %% ==== Relationships ==== %%

    TAG ||--|{ POST_TAG : created_tag

    POST ||--|{ POST_TAG : in_post


